# Peas

./: default.nix  make.sh  readme.md  watch.sh
backend/: EmployeeTracker.cabal  LICENSE  peas.cabal
backend/exe-elm-gen/: Main.hs
backend/exe-server/: Main.hs
backend/src/EmployeeTracker/: Application.hs  DatabaseOperations.hs  Elm.hs  Endpoints.hs  PageServer.hs  Prelude.hs
backend/src/Peas/: Application.hs  DatabaseOperations.hs  Elm.hs  Endpoints.hs  PageServer.hs  Prelude.hs
database/: .gitignore  delete_db.sh  init_db.sh  insert_test_data.sql  project.sql  psql.sh
database/example_queries/: authenticate_example.sql  delete_employees_example.sql  get_employees_example.sql  post_employees_example.sql  put_employees_example.sql
frontend/: build.sh  package-lock.json  package.json  webpack.config.js
frontend/src/: AppContent.jsx  Main.elm  Util.elm  effects.jsx  index.jsx  lens.jsx  types.jsx
frontend/src/effects/: common.jsx
frontend/src/employee/: common.jsx  employee.jsx  skill.jsx
frontend/src/fields/: common.jsx  employee.jsx  skill.jsx
frontend/src/ui/: DropDownMenu.jsx
frontend/src/views/: DataTable.jsx  EffectStack.jsx  NewRowForm.jsx
nix/: sources.json
public/: app.js  style.css
